<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/menu_title"
        android:layout_marginBottom="30dp"/>

    <Button android:id="@+id/btnStart" android:text="@string/btn_start" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <Button android:id="@+id/btnProfile" android:text="@string/btn_profile" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <Button android:id="@+id/btnSettings" android:text="@string/btn_settings" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <Button android:id="@+id/btnProblem" android:text="@string/btn_report" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <Button android:id="@+id/btnExit" android:text="@string/btn_exit" android:layout_width="match_parent" android:layout_height="wrap_content"/>

</LinearLayout>