<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="30dp"
        android:text="@string/auth_title"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:text="@string/btn_register"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:text="@string/btn_exit"
        android:layout_height="wrap_content" />

</LinearLayout>