<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/reg_title"
        android:layout_marginBottom="20dp"/>

    <EditText android:id="@+id/etRegLogin" android:hint="@string/login_hint" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <EditText android:id="@+id/etRegEmail" android:hint="@string/email_hint" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" />
    <EditText android:id="@+id/etRegPassword" android:hint="@string/password_hint" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSubmitReg"
        android:text="@string/btn_submit_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>
</LinearLayout>